# Jackpot

./: .gitattributes  .gitignore  README.md  TODO.md  autocorrelation.ipynb  pyproject.toml  report.ipynb  tbudd_wolff.ipynb  test.ipynb  workbench.ipynb  workbench2.ipynb  workbench3.ipynb
_old/: model.py  primitives_old.py  workbench.ipynb  workbench2.ipynb
experiments/autocorrelation/N128_metropolis_hastings/: ac_df.feather  ac_df_expl.feather  config.json  evolve_meas_df.feather  experiment.ipynb  saved_variables.json
experiments/autocorrelation/N128_wolff/: ac_df.feather  ac_df_expl.feather  config.json  evolve_meas_df.feather  experiment.ipynb  saved_variables.json
experiments/autocorrelation/N16_metropolis_hastings/: ac_df.feather  ac_df_expl.feather  config.json  evolve_meas_df.feather  experiment.ipynb  saved_variables.json
experiments/autocorrelation/N16_wolff/: ac_df.feather  ac_df_expl.feather  config.json  evolve_meas_df.feather  experiment.ipynb  saved_variables.json
experiments/autocorrelation/N192_metropolis_hastings/: ac_df.feather  ac_df_expl.feather  config.json  evolve_meas_df.feather  experiment.ipynb  saved_variables.json
experiments/autocorrelation/N192_wolff/: ac_df.feather  ac_df_expl.feather  config.json  evolve_meas_df.feather  experiment.ipynb  saved_variables.json
experiments/autocorrelation/N256_metropolis_hastings/: ac_df.feather  ac_df_expl.feather  config.json  evolve_meas_df.feather  experiment.ipynb  saved_variables.json
experiments/autocorrelation/N256_wolff/: ac_df.feather  ac_df_expl.feather  config.json  evolve_meas_df.feather  experiment.ipynb  saved_variables.json
experiments/autocorrelation/N32_metropolis_hastings/: ac_df.feather  ac_df_expl.feather  config.json  evolve_meas_df.feather  experiment.ipynb  saved_variables.json
experiments/autocorrelation/N32_swendsen_wang/: ac_df.feather  config.json  (+4 more)
experiments/measure_2D/: observation_summary.feather
experiments/measure_3D/: observation_summary.feather
experiments/measure_3D_1/: observation_summary.feather
experiments/performance/: tbudd_wolff_perf.json
experiments/test/: config.json  experiment.ipynb
ising/: algorithms.py  algorithms_old.py  config.py  fitting.py  model.py  module.py  modules.py  primitives.py  primitives2.py  state.py  types.py  typing.py
ising/algorithms/: cluster.py  local.py
ising/primitives/: _autocorrelate_statsmodels.py  autocorrelate.py  cluster.py  convolve.py  local.py  measure.py  state.py  utils.py
ising/utils/: __init__.py  graph.py  pbar.py  plot.py  random.py  tree.py  types.py
jackpot/: config.py  debug.py  module.py  modules.py  profile.py  state.py  typing.py
jackpot/algorithms/: __init__.py  base.py  cluster.py  glauber.py  local.py  metropolis_hastings.py  swendsen_wang.py  wolff.py
jackpot/models/: __init__.py  base.py  ising.py  vector_potts.py
jackpot/primitives/: _autocorrelate_statsmodels.py  autocorrelate.py  cluster.py  local.py  measure.py  state.py  utils.py
jackpot/utils/: data.py  graph.py  map.py  pbar.py  random.py  tree.py
notebooks/: binder.ipynb  measurements.ipynb
parameters/: base.yaml  make_params.ipynb
parameters/autocorrelation/: N128_metropolis_hastings.yaml  N128_wolff.yaml  N16_metropolis_hastings.yaml  N16_wolff.yaml  N192_metropolis_hastings.yaml  N192_wolff.yaml  N256_metropolis_hastings.yaml  N256_wolff.yaml  N32_metropolis_hastings.yaml  N32_swendsen_wang.yaml  N32_wolff.yaml  N512_metropolis_hastings.yaml  N512_wolff.yaml  N64_metropolis_hastings.yaml  N64_wolff.yaml
parameters/measure/: N128_wolff.yaml  N192_wolff.yaml  N224_metropolis_hastings.yaml  N32_wolff.yaml  N96_metropolis_hastings.yaml
parameters/measure_2D/: N160_wolff.yaml  N16_wolff.yaml  N256_wolff.yaml  N64_wolff.yaml
parameters/measure_3D/: N16_wolff.yaml  N24_wolff.yaml  N32_wolff.yaml  N40_wolff.yaml  N48_wolff.yaml  N56_wolff.yaml  N64_wolff.yaml  N8_wolff.yaml
parameters/performance/: N128_metropolis_hastings.yaml  N128_wolff.yaml  N16_metropolis_hastings.yaml  N16_wolff.yaml  N192_metropolis_hastings.yaml  N192_wolff.yaml  N256_metropolis_hastings.yaml  N256_wolff.yaml  N32_metropolis_hastings.yaml  N32_wolff.yaml  N64_metropolis_hastings.yaml  N64_wolff.yaml
report/: report.bib
tests/: test_primitives.py
tests/primitives/: test_cluster.py
(+232 files in other folders)
