[tool.poetry]
name = "isingmodel"
version = "0.1.0"
description = "A pure python implementation of the Ising Model using the Metropolis algorithm"
authors = ["Jeppe Klitgaard <hi@jeppe.science>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
numpy = "^1.24.2"
matplotlib = "^3.7.1"
scipy = "^1.10.1"
ipywidgets = "^8.0.6"
jax = {extras = ["cpu"], version = "^0.3.4"}
tqdm = "^4.65.0"
uncertainties = "^3.1.7"
plotly = "^5.14.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.22.0"
mypy = "^1.1.1"
ruff = "^0.0.261"

pytest = "^7.2.2"

# Mypy
[tool.mypy]
python_version = "3.11"
strict = true
show_error_codes = true

files = ["ising"]

plugins = ["numpy.typing.mypy_plugin"]

[[tool.mypy.overrides]]
module = ["numpy.*", "jax.*"]
disallow_untyped_calls = false

[[tool.mypy.overrides]]
module = ["matplotlib.*", "scipy.*"]
ignore_missing_imports = true

# Ruff
[tool.ruff]
target-version = ["py311"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
