[tool.poetry]
name = "isingmodel"
version = "0.1.0"
description = "A pure python implementation of the Ising Model using the Metropolis algorithm"
authors = ["Jeppe Klitgaard <hi@jeppe.science>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
numpy = "^1.24.2"
matplotlib = "^3.7.1"
scipy = "^1.10.1"
ipywidgets = "^8.0.6"
jax = {extras = ["cpu"], version = "^0.4.8"}
tqdm = "^4.65.0"
uncertainties = "^3.1.7"
plotly = "^5.14.0"
equinox = "^0.10.2"
jaxtyping = "^0.2.14"
einops = "^0.6.0"
pandas = "^2.0.0"
seaborn = "^0.12.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.22.0"

mypy = "^1.1.1"
ruff = "^0.0.261"

poethepoet = "^0.19.0"

pytest = "^7.2.2"

# Poe
black = "^23.3.0"
nbqa = "^1.7.0"
[tool.poe.tasks]
lint = [
    {cmd = "ruff . "},
    {cmd = "nbqa ruff ."},
]

check = {cmd = "mypy", help = "Run mypy"}
test = {cmd = "pytest", help = "Run pytest"}
ruff-fix = [
    {cmd = "black ."},
    {cmd = "ruff --fix ."},
    {cmd = "nbqa ruff . --fix"},
    {cmd = "nbqa black ."},
]

dev = [
    "lint",
    "check",
    "test",
]

fix = [
    "ruff-fix",
]

# Mypy
[tool.mypy]
python_version = "3.11"
strict = true
show_error_codes = true

disallow_untyped_calls = false
disallow_untyped_decorators = false

files = ["ising"]

plugins = ["numpy.typing.mypy_plugin"]

[[tool.mypy.overrides]]
module = ["matplotlib.*", "scipy.*", "equinox.*"]
ignore_missing_imports = true

# Ruff
[tool.ruff]
target-version = "py311"
line-length = 88

select = [
    "E",
    "F",
    "UP",  # pyupgrade
    "NPY001",  # numpy-deprecated-type-alias
    "I",  # isort
]

ignore = [
    "E731",
    "F821",
    "F722",
    "UP037",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
